# FRC_Score_Analyzer

./: .gitmodules  CMakeLists.txt  ScoreAnalyzer.proj  ToDo.txt
inc/: CmdOptions.h  ConfigParser.h  GameConfig.h  MainWindow.h  MainWindow.ui
res/: frc_2018_powerup.xml  gameDescriptionDocument2013.xml  gameDescriptionDocument2018.xml  gameDescriptionDocument2019.xml
src/: CmdOptions.cpp  ConfigParser.cpp  MainWindow.cpp  main.cpp
